WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151437
[EFL][GTK] context_menu API test failed after
r192333
https://bugs.webkit.org/show_bug.cgi?id=151437
Summary
[EFL][GTK] context_menu API test failed after r192333
Hunseop Jeong
Reported
2015-11-19 00:01:25 PST
8/69 Test #8: test_ewk2_context_menu .............................***Failed 13.28 sec ../../Source/WebKit2/UIProcess/API/efl/tests/test_ewk2_context_menu.cpp:70: Failure Value of: eina_list_count(list) Actual: 5 Expected: 4 ../../Source/WebKit2/UIProcess/API/efl/tests/test_ewk2_context_menu.cpp:107: Failure Value of: eina_list_count(list) Actual: 5 Expected: 4 test_ewk2_context_menu API test failed between
r192335
-
r192338
. I don't know the culprit, we have to find the cause.
Attachments
Patch
(2.06 KB, patch)
2015-11-19 04:27 PST
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(2.06 KB, patch)
2015-11-19 04:45 PST
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hunseop Jeong
Comment 1
2015-11-19 03:59:47 PST
r192333
looks like the culprit. GTK TestContextMenu also failed after
r192333
.
https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Debug%20%28Tests%29/builds/6209/steps/API%20tests/logs/stdio
/webkit2/WebKitWebView/default-menu: ASSERTION FAILED: type == WebCore::ActionType || type == WebCore::CheckableActionType || type == WebCore::SeparatorType ../../Source/WebKit2/Shared/WebContextMenuItemData.cpp(57) : WebKit::WebContextMenuItemData::WebContextMenuItemData(WebCore::ContextMenuItemType, WebCore::ContextMenuAction, const WTF::String&, bool, bool)
Hunseop Jeong
Comment 2
2015-11-19 04:04:07 PST
seperatorItem and ShareMenuItem was added to contextMenu after
r192333
.
Hunseop Jeong
Comment 3
2015-11-19 04:27:22 PST
Created
attachment 265858
[details]
Patch
Hunseop Jeong
Comment 4
2015-11-19 04:45:55 PST
Created
attachment 265860
[details]
Patch
Carlos Garcia Campos
Comment 5
2015-11-19 05:03:20 PST
Comment on
attachment 265860
[details]
Patch Thanks!
WebKit Commit Bot
Comment 6
2015-11-19 18:45:14 PST
Comment on
attachment 265860
[details]
Patch Clearing flags on attachment: 265860 Committed
r192672
: <
http://trac.webkit.org/changeset/192672
>
WebKit Commit Bot
Comment 7
2015-11-19 18:45:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug