[EFL][GTK] context_menu API test failed after r192333 https://bugs.webkit.org/show_bug.cgi?id=151437

Reviewed by Carlos Garcia Campos.

EFL,GTK port didn't use the share Menu.

* page/ContextMenuController.cpp:
(WebCore::ContextMenuController::populate):


Canonical link: https://commits.webkit.org/169634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192672 268f45cc-cd09-0410-ab3c-d52691b4dbfc