Source/WebCore/page/ContextMenuController.cpp
@@ -797,7 +797,11 @@ void ContextMenuController::populate()
     ContextMenuItem SelectAllItem(ActionType, ContextMenuItemTagSelectAll, contextMenuItemTagSelectAll());
 #endif
 
+#if PLATFORM(GTK) || PLATFORM(EFL)
+    ContextMenuItem ShareMenuItem;
+#else
     ContextMenuItem ShareMenuItem(SubmenuType, ContextMenuItemTagShareMenu, emptyString());
+#endif
 
     Node* node = m_context.hitTestResult().innerNonSharedNode();
     if (!node)
@@ -920,10 +924,12 @@ void ContextMenuController::populate()
                 if (frame->page() && !frame->isMainFrame())
                     appendItem(OpenFrameItem, m_contextMenu.get());
 
-                appendItem(*separatorItem(), m_contextMenu.get());
-                appendItem(ShareMenuItem, m_contextMenu.get());
+                if (!ShareMenuItem.isNull()) {
+                    appendItem(*separatorItem(), m_contextMenu.get());
+                    appendItem(ShareMenuItem, m_contextMenu.get());
+                }
             }
-        } else {
+        } else if (!ShareMenuItem.isNull()) {
             appendItem(*separatorItem(), m_contextMenu.get());
             appendItem(ShareMenuItem, m_contextMenu.get());
         }
